New major changes

--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/pictures/logo/20260103_114553_0000.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>faith-in-focus-landing</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Haven Word Church</title>
+    <meta name="description" content="Haven Word Church - The Spread City. A vibrant community dedicated to spreading the gospel and building lasting relationships in Christ." />
+    <meta name="author" content="Haven Word Church" />
 
-    <meta property="og:title" content="faith-in-focus-landing" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Haven Word Church" />
+    <meta property="og:description" content="Haven Word Church - The Spread City. A vibrant community dedicated to spreading the gospel and building lasting relationships in Christ." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/pictures/logo/20260103_114553_0000.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Haven Word Church" />
+    <meta name="twitter:description" content="Haven Word Church - The Spread City. A vibrant community dedicated to spreading the gospel and building lasting relationships in Christ." />
+    <meta name="twitter:image" content="/pictures/logo/20260103_114553_0000.png" />
   </head>
 
   <body>
